# rcc

./: .gitignore  Cargo.toml  LICENSE  README.md  input.c
rcc_asm_arm/: Cargo.toml
rcc_asm_arm/src/: lib.rs
rcc_asm_x86/: Cargo.toml
rcc_asm_x86/src/: lib.rs
rcc_backend_arm/: Cargo.toml
rcc_backend_arm/src/: lib.rs  register.rs
rcc_backend_asm/: Cargo.toml
rcc_backend_asm/src/: lib.rs
rcc_backend_llvm/: Cargo.toml
rcc_backend_llvm/src/: lib.rs
rcc_backend_traits/: Cargo.toml
rcc_backend_traits/src/: lib.rs
rcc_backend_x86/: Cargo.toml
rcc_backend_x86/src/: lib.rs  register.rs
rcc_bytecode/: Cargo.toml
rcc_bytecode/src/: instruction.rs  lib.rs  lowering.rs  utils.rs
rcc_error/: Cargo.toml
rcc_error/src/: lib.rs
rcc_lexer/: Cargo.toml
rcc_lexer/src/: common.rs  lib.rs
rcc_main/: Cargo.toml
rcc_main/src/: main.rs
rcc_opt/: Cargo.toml
rcc_opt/src/: constant_folder.rs  constant_folding.rs  lib.rs  variable_inliner.rs
rcc_parser/: Cargo.toml
rcc_parser/src/: ast.rs  block.rs  expr.rs  lib.rs  pretty_printer.rs  utils.rs
rcc_span/: Cargo.toml
rcc_span/src/: lib.rs
rcc_structures/: Cargo.toml
rcc_structures/src/: lib.rs
src/: ctypes.rs  error.rs  generator.rs  lexer.rs  lexer_old.rs  lib.rs  main.rs  parser.rs  peekable.rs
src/lexer/: error.rs  list.rs  token.rs
src/parser/: ast.rs  expression.rs  helpers.rs
tests/: blog_tests.rs  lexing.rs
tests/c_src/: test.lexing
write_a_c_compiler/: test_compiler.sh
write_a_c_compiler/stage_11/invalid/: and.c  l-shift.c  modulo.c  or.c  precedence.c  r-shift.c  xor.c
write_a_c_compiler/stage_11/valid/: and.c  l-shift.c  modulo.c  or.c  precedence.c  r-shift.c  xor.c
