[package]
name = "rcc_backend_arm"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcc_bytecode = { version = "0.0.0", path = "../rcc_bytecode" }
rcc_structures = { version = "0.0.0", path = "../rcc_structures" }
