[package]
name = "rcc_main"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcc_asm_x86 = { version = "0.0.0", path = "../rcc_asm_x86" }
rcc_asm_arm = { version = "0.0.0", path = "../rcc_asm_arm" }
rcc_backend_asm = { version = "0.0.0", path = "../rcc_backend_asm" }
rcc_bytecode = { version = "0.0.0", path = "../rcc_bytecode" }
rcc_lexer = { version = "0.0.0", path = "../rcc_lexer" }
rcc_opt = { version = "0.0.0", path = "../rcc_opt" }
rcc_parser = { version = "0.0.0", path = "../rcc_parser" }
