[package]
name = "rcc_parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peekmore = "1.0.0"
rcc_error = { version = "0.0.0", path = "../rcc_error" }
rcc_lexer = { version = "0.0.0", path = "../rcc_lexer" }
rcc_span = { version = "0.0.0", path = "../rcc_span" }
